# sheldrake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh
.github/workflows/: cmake_docs.yml  cmake_tests.yml
cmake_examples/01_cartpole/: 01_cartpole.cpp
cmake_examples/02_cartpole_lqr/: 02_cartpole_lqr.cpp
examples/01_cartpole/: 01_cartpole.cpp  CMakeLists.txt
examples/02_cartpole_lqr/: CMakeLists.txt
include/: sheldrake.hpp
src/: CMakeLists.txt  sheldrake.cpp  sheldrake.hpp  test.cpp
test/: CMakeLists.txt  basic_tests.cc  closed_loop.cc  drake.cc
